# leetcode

./: .pre-commit-config.yaml  pyproject.toml
practice/classes/: classes.py
practice/graphs/: number_of_islands.py  shortest_distance_from_all_buildings.py
practice/misc/: binary_search.py  currency_exchange.py  monty_hall.py  sorting_array_window_sliding.py
