[tool.poetry]
name = "leetcode"
version = "0.1.0"
description = ""
authors = ["Luis Ek <52711401+lek18@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
